--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,13 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+doctrine_mongodb:
+    connections:
+        default:
+            server: mongodb://localhost:27017
+            options: {}
+    default_database: wizardry
+    document_managers:
+        default:
+            auto_mapping: true
