--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 _wizardry:
     resource: "@WizardryMainBundle/Resources/config/routing.yml"
     prefix:   /
+
+_wizardry_api:
+    resource : "@WizardryApiBundle/Resources/config/routing.yml"
+    prefix: /api
