--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,3 +60,14 @@ doctrine_mongodb:
     document_managers:
         default:
             auto_mapping: true
+
+fos_rest:
+    view:
+        view_response_listener: 'force'
+        formats:
+            json: true
+        failed_validation: HTTP_BAD_REQUEST
+
+    routing_loader:
+         default_format: json
+
