--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,4 +70,7 @@ fos_rest:
 
     routing_loader:
          default_format: json
+    exception:
+            codes:
+                'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
 
