--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "doctrine/doctrine-fixtures-bundle": "2.2.*",
         "hautelook/alice-bundle": "0.2.*",
         "friendsofsymfony/rest-bundle": "~1.5",
-        "jms/serializer-bundle": "0.13.*"
+        "jms/serializer-bundle": "0.13.*",
+        "sonata-project/admin-bundle": "~2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
