--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "hautelook/alice-bundle": "0.2.*",
         "friendsofsymfony/rest-bundle": "~1.5",
         "jms/serializer-bundle": "0.13.*",
-        "sonata-project/admin-bundle": "~2.3"
+        "sonata-project/admin-bundle": "~2.3",
+        "sonata-project/doctrine-mongodb-admin-bundle": "~2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
