--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "friendsofsymfony/rest-bundle": "~1.5",
         "jms/serializer-bundle": "0.13.*",
         "sonata-project/admin-bundle": "~2.3",
-        "sonata-project/doctrine-mongodb-admin-bundle": "~2.3"
+        "sonata-project/doctrine-mongodb-admin-bundle": "~2.3",
+        "nelmio/api-doc-bundle": "~2.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
