added api methods to API DOC

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,6 +63,8 @@ doctrine_mongodb:
 
 fos_rest:
     view:
+        templating_formats:
+            html: false
         view_response_listener: 'force'
         formats:
             json: true
