--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,10 @@ _wizardry_api:
     resource : "@WizardryApiBundle/Resources/config/routing.yml"
     prefix: /api
 
+_wizardry_user:
+    resource: "@WizardryUserBundle/Resources/config/routing.yml"
+    prefix:   /user
+
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
