added sonata routes, changed services format to xml

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,8 +8,10 @@ _wizardry_api:
 
 _wizardry_user:
     resource: "@WizardryUserBundle/Resources/config/routing.yml"
-    prefix:   /user
+    prefix:   /
 
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
+
+
