installed nelmio cors bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,3 +83,13 @@ sonata_block:
             contexts:   [admin]
 
 nelmio_api_doc: ~
+
+nelmio_cors:
+    paths:
+        '^/api/':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+            allow_credentials: false
+
