--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,8 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
+        packages:
+            assets_base_urls: []
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
