--- a/src/Wizardry/MainBundle/Resources/config/routing.yml
+++ b/src/Wizardry/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-hello_page:
-    pattern:  /hello/{name}
+index_page:
+    pattern:  /
     defaults: { _controller: WizardryMainBundle:Default:index }
