--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,4 +14,5 @@ NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
 
-
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
