--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,5 +1,7 @@
 security:
     providers:
+        fos_userbundle:
+           id: fos_user.user_provider.username
         in_memory:
             memory:
                 users:
@@ -11,14 +13,28 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt|error)|css|images|js)/
             security: false
+        main:
+             pattern: ^/
+             form_login:
+                 provider: fos_userbundle
+                 csrf_provider: form.csrf_provider
+             logout:       true
+             anonymous:    true
 
         default:
             anonymous: ~
             http_basic: ~
 
     access_control:
-        # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/admin/, role: ROLE_ADMIN }
+
+    role_hierarchy:
+         ROLE_ADMIN:       ROLE_USER
+         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     encoders:
          Symfony\Component\Security\Core\User\User: plaintext
+         FOS\UserBundle\Model\UserInterface: sha512
