--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "sonata-project/admin-bundle": "~2.3",
         "sonata-project/doctrine-mongodb-admin-bundle": "~2.3",
         "nelmio/api-doc-bundle": "~2.7",
-        "nelmio/cors-bundle": "~1.4"
+        "nelmio/cors-bundle": "~1.4",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
