--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,19 +31,57 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form:
+        resources: ['bootstrap_3_layout.html.twig']
 
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles: ['FOSUserBundle', 'WizardryUserBundle']
     #java: /usr/bin/java
     filters:
+        scss:
+            style: 'compressed'
+            compass: true
+            apply_to: "\.scss$"
         cssrewrite: ~
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
         #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+
+    assets:
+        bootstrap_css:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/css/bootstrap.css
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/css/bootstrap-theme.css
+        bootstrap_js:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/js/bootstrap.js
+        jquery:
+            inputs:
+                 - %kernel.root_dir%/../vendor/components/jquery/jquery.js
+        glyphicons_halflings_regular_eot:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.eot
+            output: "fonts/glyphicons-halflings-regular.eot"
+        glyphicons_halflings_regular_svg:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.svg
+            output: "fonts/glyphicons-halflings-regular.svg"
+        glyphicons_halflings_regular_ttf:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.ttf
+            output: "fonts/glyphicons-halflings-regular.ttf"
+        glyphicons_halflings_regular_woff:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.woff
+            output: "fonts/glyphicons-halflings-regular.woff"
+        bootstrap_theme_map:
+            inputs:
+                 - %kernel.root_dir%/../vendor/twitter/bootstrap/dist/css/bootstrap-theme.css.map
+            output: "css/bootstrap-theme.css.map"
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -99,3 +137,7 @@ fos_user:
     db_driver: mongodb
     firewall_name: main
     user_class: Wizardry\UserBundle\Document\User
+    registration:
+        form:
+            type: wizardry_user_registration
+
