--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,6 +99,10 @@ doctrine_mongodb:
     default_database: wizardry
     document_managers:
         default:
+            mappings:
+                    WizardryUserBundle: ~
+                    SonataUserBundle: ~
+                    FOSUserBundle: ~
             auto_mapping: true
 
 fos_rest:
@@ -116,11 +120,17 @@ fos_rest:
             codes:
                 'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
 
+sonata_user:
+    manager_type: mongodb
+
 sonata_block:
     default_contexts: [cms]
     blocks:
         sonata.admin.block.admin_list:
             contexts:   [admin]
+        sonata.user.block.menu:    # used to display the menu in profile pages
+        sonata.user.block.account: # used to display menu option (login option)
+        sonata.block.service.text: # used to if you plan to use Sonata user routes
 
 nelmio_api_doc: ~
 
@@ -140,4 +150,23 @@ fos_user:
     registration:
         form:
             type: wizardry_user_registration
+    group:
+        group_class:   Sonata\UserBundle\Document\BaseGroup
+        group_manager: sonata.user.mongodb.group_manager
 
+    service:
+        user_manager: sonata.user.mongodb.user_manager
+
+doctrine:
+    dbal:
+        types:
+            json: Sonata\Doctrine\Types\JsonType
+
+services:
+    sonata.user.admin.group:
+        abstract: true
+        public: false
+
+parameters:
+    sonata.user.admin.user.class: Wizardry\UserBundle\Admin\UserAdmin
+    sonata.user.admin.user.entity: Wizardry\UserBundle\Document\User
