--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+wizardry_parse:
+    resource: "@WizardryParseBundle/Resources/config/routing.yml"
+    prefix:   /
+
 _wizardry:
     resource: "@WizardryMainBundle/Resources/config/routing.yml"
     prefix:   /
