--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,3 @@
-wizardry_parse:
-    resource: "@WizardryParseBundle/Resources/config/routing.yml"
-    prefix:   /
-
 _wizardry:
     resource: "@WizardryMainBundle/Resources/config/routing.yml"
     prefix:   /
@@ -12,6 +8,10 @@ _wizardry_api:
 
 _wizardry_user:
     resource: "@WizardryUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
+_wizardry_parse:
+    resource: "@WizardryParseBundle/Resources/config/routing.yml"
     prefix:   /
 
 NelmioApiDocBundle:
