--- a/src/Wizardry/MainBundle/Resources/config/routing.yml
+++ b/src/Wizardry/MainBundle/Resources/config/routing.yml
@@ -2,7 +2,7 @@ index_page:
     pattern:  /
     defaults: { _controller: "WizardryMainBundle:Default:index" }
 
-app_set_show:
+app_block_show:
     pattern:  /block/{id}
     defaults: { _controller: "WizardryMainBundle:Block:show" }
 
